Legger bare til det jeg har fått gjort til nå, skal ikke være altfor vanskelig å fullføre denne saveToFile, men det begynner å bli sent.